--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <h1>Hello, Pluralsight!</h1>
   <ul>
-    <li> dog</li>
-    <li> cat</li>
+    <li> I would like to learn C#. </li>
+    <li> I would like to learn .NET! </li>
   </ul>
 </body>
 
